RESOLVED FIXED48089
Find indicator does not draw found text in WebKit2 when page is not scrolled to top
https://bugs.webkit.org/show_bug.cgi?id=48089
Summary Find indicator does not draw found text in WebKit2 when page is not scrolled ...
Anders Carlsson
Reported 2010-10-21 13:13:55 PDT
Find indicator does not draw found text in WebKit2 when page is not scrolled to top
Attachments
Patch (3.21 KB, patch)
2010-10-21 13:20 PDT, Anders Carlsson
sullivan: review+
Anders Carlsson
Comment 1 2010-10-21 13:17:31 PDT
Anders Carlsson
Comment 2 2010-10-21 13:20:45 PDT
Anders Carlsson
Comment 3 2010-10-21 13:26:16 PDT
Note You need to log in before you can comment on or make changes to this bug.