Find indicator does not draw found text in WebKit2 when page is not scrolled to top <rdar://problem/8562647> https://bugs.webkit.org/show_bug.cgi?id=48089

Reviewed by John Sullivan.

We always want the selection rectangle in "WebCore window coordinates" which is the same
as WKView coordinates in WebKit2.

* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::updateFindIndicator):

Canonical link: https://commits.webkit.org/60812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70261 268f45cc-cd09-0410-ab3c-d52691b4dbfc